--- a/hytdemo-biz/pom.xml
+++ b/hytdemo-biz/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>hytdemo-biz</artifactId>
+    <packaging>jar</packaging>
 
 
 </project>
