创建有赞转发模块并设置依赖于biz

--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>hytdemo-biz</module>
+        <module>youzan-push-forward-web</module>
     </modules>
 
 
